# table-ai

./: .gitignore  README.md  issues  pyproject.toml
backend/: apis.py  asd  auth.py  config.py  db.py  dependencies.py  errors.py  forms.py  haha.py  models.py  server copy.py  server.py  sessions.db  sth.py  sth_else.py  template.py  utils.py
backend/frontend/: index.css  main.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.ts
backend/frontend/src/: index.css  main.tsx
backend/frontend/templates/: 404.html  dashboard copy.html  index copy.html  index.html  index.js  sth.html  tables.html
backend/instance/: project.db
backend/interfaces/: __init__.py
backend/routes/: __init__.py  htmx_response.py  views copy.py  views.py
backend/services/: folder.py  session.py  tables.py  upload.py
backend/store/: __init__.py  sth.csv
backend/templates/: 404.html  exec_template.txt  haha copy.html  haha.html  hihi.html  index copy 2.html  index copy.html  index.html  index.j2  layout.html  login.html  signup.html  sth.html
backend/templates/components/: flash_message.html
backend/templates/htmx_response/: btn-response.html  check-room-name.html  existing_room.html  table.html
backend/uploads/22442226-f8b5-4328-a4e0-cf6b197a0136/: pokemon.parquet.gzip
backend/uploads/asd/: Book6.parquet.gzip  pokemon.parquet.gzip
backend/uploads/asd_9168024629/: làm lại n lần r đó dm.parquet.gzip
backend/utils/: __init__.py
old_backend/: config.py  haha.py  models.py
old_backend/frontend/: package.json  tailwind.config.js  vite.config.js
old_backend/instance/: project.db
old_backend/interfaces/: __init__.py
old_backend/routes/: htmx_response.py  views.py
(+24 files in other folders)
