[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["shyn_le <highlandetspirou2812@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-htmx = "^0.3.1"
pandas = "^2.1.0"
duckdb = "^0.8.1"
openpyxl = "^3.1.2"
flask-wtf = "^1.1.1"
fastparquet = "^2023.8.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
