[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["shyn_le <highlandetspirou2812@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
duckdb = "^0.8.1"
openpyxl = "^3.1.2"
fastparquet = "^2023.8.0"
fastapi = {extras = ["all"], version = "^0.103.1"}
python-multipart = "^0.0.6"
cohere = "^4.27"
uuid = "^1.30"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
